--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=spring-boot
+server.address=192.168.1.12
 server.port=8084
 spring.datasource.url=jdbc:postgresql://localhost:5332/client
 spring.datasource.username=temurDev
